@@ -1,86 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<type>database</type>
-		<description>Language labels for database tables/fields belonging to extension 'fluiddisplay'</description>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="tx_fluiddisplay_displays">Fluid based Display</label>
-			<label index="tx_fluiddisplay_displays.title">Title</label>
-			<label index="tx_fluiddisplay_displays.description">Description</label>
-			<label index="tx_fluiddisplay_displays.template">Fluid Template</label>
-
-			<!--
-			<label index="tx_fluiddisplay_displays.text">Text</label>
-			<label index="tx_fluiddisplay_displays.richtext">Rich text (HTML)</label>
-			<label index="tx_fluiddisplay_displays.image">Image</label>
-			<label index="tx_fluiddisplay_displays.image_resource">Image Resource</label>
-			<label index="tx_fluiddisplay_displays.link_to_detail">URL to detail</label>
-			<label index="tx_fluiddisplay_displays.link_to_page">URL to page</label>
-			<label index="tx_fluiddisplay_displays.link_to_file">URL to file</label>
-			<label index="tx_fluiddisplay_displays.user">User Function</label>
-			<label index="tx_fluiddisplay_displays.debug">Debug (extension develog must be installed)</label>
-			<label index="tx_fluiddisplay_displays.debug_markers">Debug markers</label>
-			<label index="tx_fluiddisplay_displays.debug_template_structure">Debug template structure</label>
-			<label index="tx_fluiddisplay_displays.debug_data_structure">Debug data structure</label>
-			<label index="tx_fluiddisplay_displays.email">Email</label>
-			<label index="tx_fluiddisplay_displays.showJson">Show JSON</label>
-			<label index="tx_fluiddisplay_displays.editJson">Edit JSON</label>
-			<label index="tx_fluiddisplay_displays.editHtml">HTML</label>
-			<label index="tx_fluiddisplay_displays.mapping">Mapping</label>
-			<label index="tx_fluiddisplay_displays.fields">Fields</label>
-			<label index="tx_fluiddisplay_displays.types">Types</label>
-			<label index="tx_fluiddisplay_displays.configuration">Typoscript configuration</label>
-			<label index="tx_fluiddisplay_displays.insertDefaultConfiguration">Insert default configuration</label>
-			<label index="tx_fluiddisplay_displays.saveFieldConfiguration">Save field configuration</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser">Page Browser Config</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_tpl">HTML template</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_showmore">Show more pages</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_showless">Show less pages</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_pagesbefore"># pages before</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_pagesafter"># pages after</label>
-			<label index="tx_fluiddisplay_displays.fileNotFound">File not found at</label>
-			<label index="tx_fluiddisplay_displays.imported">imported</label>
-			-->
-
-		</languageKey>
-		<languageKey index="fr" type="array">
-			<label index="tx_fluiddisplay_displays">Afficheur de données (gabarit Fluid</label>
-			<label index="tx_fluiddisplay_displays.title">Nom</label>
-			<label index="tx_fluiddisplay_displays.description">Description</label>
-			<label index="tx_fluiddisplay_displays.template">Modèle HTML</label>
-			<!--
-			<label index="tx_fluiddisplay_displays.text">Texte</label>
-			<label index="tx_fluiddisplay_displays.richtext">Texte riche (HTML)</label>
-			<label index="tx_fluiddisplay_displays.image">Image</label>
-			<label index="tx_fluiddisplay_displays.image_resource">Image Ressource</label>
-			<label index="tx_fluiddisplay_displays.link_to_detail">URL vers detail</label>
-			<label index="tx_fluiddisplay_displays.link_to_page">URL vers page</label>
-			<label index="tx_fluiddisplay_displays.link_to_file">URL vers fichier</label>
-			<label index="tx_fluiddisplay_displays.user">Fonction utilisateur</label>
-			<label index="tx_fluiddisplay_displays.debug">Deboguer (l'extension devlog doit être installé)</label>
-			<label index="tx_fluiddisplay_displays.debug_markers">Deboguer les tags</label>
-			<label index="tx_fluiddisplay_displays.debug_template_structure">Deboguer la structure de modèles</label>
-			<label index="tx_fluiddisplay_displays.debug_data_structure">Deboguer la structure de données</label>
-			<label index="tx_fluiddisplay_displays.email">Email</label>
-			<label index="tx_fluiddisplay_displays.showJson">Afficher JSON</label>
-			<label index="tx_fluiddisplay_displays.editJson">Editer JSON</label>
-			<label index="tx_fluiddisplay_displays.editHtml">HTML</label>
-			<label index="tx_fluiddisplay_displays.fields">Champs</label>
-			<label index="tx_fluiddisplay_displays.types">Types</label>
-			<label index="tx_fluiddisplay_displays.configuration">Configuration Typoscript</label>
-			<label index="tx_fluiddisplay_displays.insertDefaultConfiguration">Insérer une valeur par défaut</label>
-			<label index="tx_fluiddisplay_displays.saveFieldConfiguration">Sauvegarder la configuration</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser">Configuration du Page Browser</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_tpl">Modèle HTML</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_showmore">Voir plus de pages</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_showless">Voir moins de pages</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_pagesbefore">nbr pages suivantes</label>
-			<label index="tx_fluiddisplay_displays.pagebrowser_pagesafter">nbr pages précédentes</label>
-			<label index="tx_fluiddisplay_displays.fileNotFound">Fichier non trouvé:</label>
-			<label index="tx_fluiddisplay_displays.imported">importé</label>
-			-->
-		</languageKey>
-	</data>
-</T3locallang>
