@@ -3,6 +3,7 @@
 	* Added composer manifest, resolves #75891
 	* Reformatted code according to PSR-2, resolves #75892
 	* Cleaned up code, resolves #75893
+	* Moved language files to XLIFF, resolves #75894
 
 2015-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
